--- a/additional_scripts/01_Introduction_to_RNAseq_Analysis_in_R.Rmd
+++ b/additional_scripts/01_Introduction_to_RNAseq_Analysis_in_R.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Introduction to RNAseq analysis in R"
 author: "Sankari Nagarajan"
-date: "May 2020"
+date: "July 2020"
 output:
   ioslides_presentation:
     css: stylesheet.css
@@ -351,7 +351,7 @@ legend("topright", legend = leg, pt.bg = cols, pch=21, bty="n")
 
 * ‘Share’ dispersion information between genes to obtain fitted estimate
 
-* Shrink gene-wise estimates towards the the fitted estimates
+* Shrink gene-wise estimates towards the fitted estimates
 
 </div>
 
