--- a/Course_Materials/02_Preprocessing_Data.Rmd
+++ b/Course_Materials/02_Preprocessing_Data.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "RNA-seq analysis in R"
 subtitle: "Pre-processsing RNA-seq data"
-author: "Stephane Ballereau, Dominique-Laurent Couturier, Mark Dunning, Abbi Edwards, Ashley Sawle"
+author: "Stephane Ballereau, Chandra Chilamakuri, Dominique-Laurent Couturier, Mark Dunning, Abbi Edwards, Ashley Sawle"
 date: '`r format(Sys.time(), "Last modified: %d %b %Y")`'
 output:
   html_document:
@@ -98,49 +98,18 @@ getting to grips with subsetting and manipulating data tables. The package
 is using standard base `R` processes. It also makes use of a new symbol `%>%`,
 called the "pipe", which makes the code a bit tidier. 
 
-We are introducing this because it makes many of the processes we will look at 
-later **much simpler**. Importantly it also results in code that is much easier
-to read and understand.
+In particular we will use the commands:
 
-Let's have a quick look at this by playing with our `sampleinfo` table.
-
-Suppose we wanted a new sample table that:
-
-1. Just includes the "basal" samples
-2. Only has the columns "CellType" and "Status"
-3. Renames the "CellType" column as "Cell"
-
-With `dplyr` we can use three new functions: `filter`, `select` and `rename`:
-
-```{r dplyr, eval=FALSE}
-newTable <- sampleinfo
-newTable <- filter(newTable, CellType=="basal")
-newTable <- select(newTable, CellType, Status)
-newTable <- rename(newTable, Cell=CellType)
-```
-
-There's no need to quote the column names as dplyr intelligently interprets
-the arguments it's passed as belonging to the data table columns.
-
-Rather than repeatedly reassigning `newTable <- f(newTable)` as above, we can 
-use the "*pipe*" - `%>%`. This takes the output of one function and "*pipes*" it
-into the first argument of the next function so that we don't have to keep
-specifying the object we are working with:
-
-```{r pipe, eval=FALSE}
-newTable <- sampleinfo %>%
-    filter(CellType=="basal") %>%
-    select(CellType, Status) %>% 
-    rename(Cell=CellType)
-```
-
-This is a fairly trivial example and the benefits may not be immediately 
-obvious, but once you get used to using `dplyr` (and the other related
-"tidyverse" packages, such as `stringr`) you'll find it much more powerful and 
-easy to use than base R. 
+* `select` to select columns from a table
+* `filter` to filter rows based on the contents of a columns in the table
+* `rename` to rename columns
 
 We will encounter a few more `dplyr` commands during the course, we will explain
 their use as we come to them.
+
+If you are familiar with R but not `dplyr` or the `tidyverse` then we have a very
+brief introduction [here](02a_A_brief_intro_to_dplyr.html). A more detailed 
+introduction can be found in our [online R course](https://bioinformatics-core-shared-training.github.io/r-intro/week4.html)
 
 ## Format the data
 
